--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.6.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
