--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "ajv": "^6.6.1",
     "bootstrap": "^4.2.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.7.3",
+    "chartjs": "^0.3.24",
+    "lodash": "^4.17.11",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1"
