--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chartjs": "^0.3.24",
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
+    "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1"
