--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lodash": "^4.17.11",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.4.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-sidebar-menu": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
